--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'javax.persistence:javax.persistence-api:2.2'
+	implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
 }
 
 tasks.named('test') {
