fix: unable to connect to database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,15 +7,16 @@ server.port=8080
 debug=true
 
 # Postgres
-spring.datasource.url=jdbc:postgres://avnadmin:AVNS_M3xtgHivMjDQQc6z1DD@banking-postgres-fb03.d.aivencloud.com:19853/defaultdb?sslmode=require
+spring.datasource.url=jdbc:postgresql://banking-postgres-fb03.d.aivencloud.com:19853/defaultdb?sslmode=require
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS_M3xtgHivMjDQQc6z1DD
+spring.datasource.platform=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 ## Spring data JPA
 spring.jpa.show-sql=true
-spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=POSTGRESQL
 ## The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
