fix: added additional validations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8080
 debug=true
 
 # Postgres
-spring.datasource.url=jdbc:postgresql://banking-postgres-fb03.d.aivencloud.com:19853/defaultdb?sslmode=require
+spring.datasource.url=jdbc:postgresql://banking-postgres-fb03.d.aivencloud.com:19853/bank?sslmode=require
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS_M3xtgHivMjDQQc6z1DD
 spring.datasource.platform=postgres
